refact home and signin and signup
