# routes/APIRouter.js
@@ -1,6 +1,6 @@
 import Router from "express";
 import login from "./auth/login.js";
-import homepage from "./auth/homepage.js";
+import homepage from "./homepage.js";
 import signup from "./auth/register.js";
 import forgetpassword from "./auth/forgetpassword.js";
 import changepassword from "./auth/changepassword.js";
@@ -8,7 +8,6 @@ import verifychangepassword from "./auth/verifychangepassword.js";
 import verifyemail from "./auth/verifyemail.js";
 import google from "./auth/google.js";
 import facebook from "./auth/facebook.js";
-import dashboard from "./dashboard.js";
 import admin from "./admin/admin.js";
 import jwt from "../util/jwt.js";
 import Tracks from "./Tracks.js";
@@ -19,6 +18,7 @@ import courses from "./courses.js";
 import exam from "./exam.js";
 import room from "./room.js";
 import hackathons from "./hackathon.js";
+import welcome from "./welcome.js";
 //*** Swagger ***/
 import swaggerUi from "swagger-ui-express";
 import swaggerFile from "../swagger_output.json" assert { type: "json" };
@@ -28,9 +28,9 @@ const router = Router();
 router.use("/api", swaggerUi.serve, swaggerUi.setup(swaggerFile));
 router.use("/exam", exam);
 
-router.use("/", homepage);
-router.use("/", login);
-router.use("/", signup);
+router.use("/", welcome);
+router.use("/signin", login);
+router.use("/signup", signup);
 router.use("/", assignment);
 router.use("/signin", forgetpassword);
 router.use("/signin", changepassword);
@@ -39,7 +39,7 @@ router.use("/signup/verifyemail", verifyemail);
 router.use("/", google);
 router.use("/", facebook);
 router.use("/upload", jwt.authenticateWithJWT, admin);
-router.use("/", jwt.authenticateWithJWT, dashboard);
+router.use("/homepage", jwt.authenticateWithJWT, homepage);
 router.use("/Tracks", jwt.authenticateWithJWT, Tracks);
 router.use("/room", jwt.authenticateWithJWT, room);
 router.use("/courses", jwt.authenticateWithJWT, courses);
