# swagger_output.json
@@ -73,21 +73,40 @@
         }
       }
     },
-    "/welcome": {
+    "/": {
       "get": {
         "tags": [
-          "homepage"
+          "chat"
         ],
-        "description": "to get homepage",
+        "description": "to get Interests page",
         "parameters": [],
         "responses": {
           "200": {
             "description": "page opened"
+          },
+          "400": {
+            "description": "User not found",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "code": {
+                  "type": "string",
+                  "example": "403"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "You cannot access this page before login"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           }
         }
       }
     },
-    "/signin": {
+    "/signin/": {
       "get": {
         "tags": [
           "user"
@@ -171,7 +190,7 @@
         }
       }
     },
-    "/signup": {
+    "/signup/": {
       "get": {
         "description": "",
         "parameters": [],
@@ -583,448 +602,16 @@
         }
       }
     },
-    "/": {
+    "/Homepage/welcome": {
       "get": {
         "tags": [
-          "HomePage"
+          "homepage"
         ],
-        "description": "to get dashboard page",
+        "description": "to get homepage",
         "parameters": [],
         "responses": {
           "200": {
             "description": "page opened"
-          },
-          "400": {
-            "description": "User not login",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "code": {
-                  "type": "string",
-                  "example": "403"
-                },
-                "message": {
-                  "type": "string",
-                  "example": "You cannot access this page before login"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          }
-        }
-      }
-    },
-    "/dashboard": {
-      "get": {
-        "tags": [
-          "HomePage"
-        ],
-        "description": "to get dashboard data",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "data of dashboard",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "code": {
-                  "type": "string",
-                  "example": "200"
-                },
-                "message": {
-                  "type": "string",
-                  "example": "data"
-                },
-                "data": {
-                  "type": "object",
-                  "properties": {
-                    "User": {
-                      "type": "object",
-                      "properties": {
-                        "firstName": {
-                          "type": "string",
-                          "example": "string"
-                        },
-                        "lastName": {
-                          "type": "string",
-                          "example": "string"
-                        },
-                        "image": {
-                          "type": "string",
-                          "example": "string"
-                        }
-                      }
-                    },
-                    "videos": {
-                      "type": "array",
-                      "items": {
-                        "type": "object",
-                        "properties": {
-                          "video": {
-                            "type": "string",
-                            "example": "string"
-                          },
-                          "comment": {
-                            "type": "string",
-                            "example": "string"
-                          }
-                        }
-                      }
-                    },
-                    "hackathons": {
-                      "type": "array",
-                      "items": {
-                        "type": "object",
-                        "properties": {
-                          "name": {
-                            "type": "string",
-                            "example": "string"
-                          },
-                          "type": {
-                            "type": "string",
-                            "example": "string"
-                          },
-                          "date": {
-                            "type": "string",
-                            "example": "date"
-                          }
-                        }
-                      }
-                    }
-                  }
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          }
-        }
-      }
-    },
-    "/{postId}": {
-      "get": {
-        "tags": [
-          "HomePage"
-        ],
-        "description": "to get dashboard page",
-        "parameters": [
-          {
-            "name": "postId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/post/{postId}": {
-      "get": {
-        "tags": [
-          "HomePage"
-        ],
-        "description": "to get dashboard page",
-        "parameters": [
-          {
-            "name": "postId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/comment/addComment": {
-      "post": {
-        "tags": [
-          "HomePage"
-        ],
-        "description": "to add comment",
-        "parameters": [
-          {
-            "name": "obj",
-            "in": "body",
-            "description": "addcomment",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "comment": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "postId": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/comment/{commentId}": {
-      "patch": {
-        "tags": [
-          "HomePage"
-        ],
-        "description": "to edit comment",
-        "parameters": [
-          {
-            "name": "commentId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "obj",
-            "in": "body",
-            "description": "addcomment",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "comment": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "HomePage"
-        ],
-        "description": "to delete comment",
-        "parameters": [
-          {
-            "name": "commentId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/replay/addReplay": {
-      "post": {
-        "tags": [
-          "HomePage"
-        ],
-        "description": "to add comment",
-        "parameters": [
-          {
-            "name": "obj",
-            "in": "body",
-            "description": "addcomment",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "comment": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "postId": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/replay/{replayId}": {
-      "patch": {
-        "tags": [
-          "HomePage"
-        ],
-        "description": "to edit comment",
-        "parameters": [
-          {
-            "name": "replayId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "obj",
-            "in": "body",
-            "description": "addcomment",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "comment": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/likePost/{postId}": {
-      "post": {
-        "tags": [
-          "HomePage"
-        ],
-        "description": "to add like to post",
-        "parameters": [
-          {
-            "name": "postId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "HomePage"
-        ],
-        "description": "to delete like from post",
-        "parameters": [
-          {
-            "name": "postId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/likeComment/{commentId}": {
-      "post": {
-        "tags": [
-          "HomePage"
-        ],
-        "description": "to add like to comment",
-        "parameters": [
-          {
-            "name": "commentId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "HomePage"
-        ],
-        "description": "to delete like comment",
-        "parameters": [
-          {
-            "name": "commentId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
           }
         }
       }
